# Amoena

./: .gitignore  .prettierignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  TODOS.md  commitlint.config.js  eslint.config.js  package.json  tsconfig.json
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/.lunaria-wrapper-export/claude-code/: accessibility-auditor.md  agent-orchestrator.md  backend-specialist.md  design-auditor.md  design-system-lead.md  devops-engineer.md  e2e-tester.md  frontend-specialist.md  infrastructure-engineer.md  ml-engineer.md  performance-engineer.md  privacy-officer.md  product-manager.md  prompt-engineer.md  release-manager.md  security-engineer.md  senior-engineer.md  technical-writer.md  test-engineer.md  ui-designer.md  user-advocate.md  ux-researcher.md
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: ai_worker.rs  cli_usage_import.rs  hooks.rs  lib.rs  logging.rs  main.rs  memory.rs  menu.rs  orchestration.rs  persona.rs  plugins.rs  pricing_cache.rs  routing.rs  runtime.rs  terminal.rs  tray.rs  workspace_reviews.rs  workspaces.rs
apps/desktop/src-tauri/tests/: agent_control_e2e.rs  bun_worker_bridge.rs  cli_parity_e2e.rs  config_resolution.rs  extension_system_e2e.rs  full_stack_scenarios.rs  hooks_e2e.rs  hooks_engine.rs  interrupt_and_files_e2e.rs  memory_e2e.rs  memory_hybrid.rs  memory_observations.rs  memory_runtime.rs  message_queue_e2e.rs  native_agent_loop.rs  orchestration_runtime.rs  orchestration_subagents.rs  persistence_foundation.rs  plugin_runtime.rs  provider_reasoning.rs  provider_reasoning_runtime.rs  provider_registry.rs  real_cli_adapters.rs  remote_mobile_runtime.rs  remote_relay.rs  remote_runtime.rs  runtime_bootstrap.rs  session_hierarchy_e2e.rs  session_lifecycle_e2e.rs  session_workspace_runtime.rs  task_management_e2e.rs  terminal_e2e.rs  tool_execution_e2e.rs  tools_permissions.rs  tools_permissions_runtime.rs  transport_contract.rs  usage_analytics_e2e.rs  workspace_e2e.rs  workspace_lifecycle.rs  workspace_merge_review.rs  (+3 more)
(+1437 files in other folders)
