[package]
name = "lunaria-desktop"
version = "0.1.0"
edition = "2021"
description = "Lunaria desktop shell and local runtime bootstrap"
license = "MIT"
repository = "https://github.com/LunariaAi/lunaria"
keywords = ["ai", "desktop", "tauri", "development-environment"]

[lib]
name = "lunaria_desktop"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "lunaria-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
axum = "0.8.6"
base64 = "0.22.1"
chacha20poly1305 = "0.10.1"
dirs = "6.0.0"
jsonwebtoken = "9.3.1"
keyring = "3.6.3"
portable-pty = "0.8"
rand = "0.8.5"
reqwest = { version = "0.12.24", default-features = false, features = ["http2", "json", "rustls-tls"] }
rusqlite = { version = "0.37.0", features = ["bundled", "serde_json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-cli = "2"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-store = "2"
tauri-plugin-stronghold = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
thiserror = "2.0.18"
time = { version = "0.3.44", features = ["formatting", "macros"] }
tokio = { version = "1.48.0", features = ["macros", "net", "process", "rt-multi-thread", "sync", "time"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json"] }
uuid = { version = "1.22.0", features = ["serde", "v4"] }
x25519-dalek = "2.0.1"

[dev-dependencies]
futures-util = "0.3.32"
tempfile = "3.23.0"
